--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <Torus innerradius="0.01" outerradius="0.09"></Torus>
                             </shape>
                         </transform>
-                    </Transform>
+                    </transform>
                     <!--TimeSensor-->
                     <TimeSensor DEF="Time" cycleInterval="5" loop="true"></TimeSensor>
                     <!--AnimateCup-->
