--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <plane size='5 5'></plane>
                     </shape>
                 </Transform>
-                <transform id=all1>
+                <transform id="all1">
                     <!--Spotlight-->
                     <transform rotation="0 0 1 1.4">
                         <spotlight location="0 4 0" direction="0 -1 0" radius="4.5" intensity="2" beamwidth=".3" cutoffAngle="0.2">
