--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <transform translation="4.4 9.6 1.5">
   <shape>
     <appearance>
-     <material id="Tmat" specularColor='0.3 0.3 0.3'></material>
+     <material specularColor='0.3 0.3 0.3'></material>
     </appearance>
    <text string="AZTEC" solid = "false"></text>
   </shape>
@@ -371,18 +371,18 @@
 </NavigationInfo>
 
 <!--Камера1-->
-<Viewpoint id="cam1" position="0 5 20"
+<Viewpoint position="0 5 20"
   orientation="1 0 0 6"
   fieldOfView="0.9">
 </Viewpoint>
 <!--Камера2-->
-<Viewpoint id="cam2" position="-15 10 4"
+<Viewpoint position="-15 10 4"
   orientation="-0.5 -0.5 -0.2 1.3"
   fieldOfView="0.9">
 </Viewpoint>
 
 <!-- TimeSensor -->
-<TimeSensor id='Time' DEF='Time' cycleInterval='6' loop='true' enabled='true'> 
+<TimeSensor DEF='Time' cycleInterval='6' loop='true' enabled='true'> 
 </TimeSensor>
 
 <!--Интерполятор ориентации для Тора-->
@@ -400,7 +400,7 @@ toNode='Torus' toField='set_rotation'>
 </ROUTE>
 
 <!--Интерполятор цвета для Crown-->
-<ColorInterpolator id="ColInt1" DEF="ColInt1" key='0 0.25 0.5 0.75 1' 
+<ColorInterpolator DEF="ColInt1" key='0 0.25 0.5 0.75 1' 
 keyValue="0 1 0, 1 0 0, 0 0 1, 1 1 0, 1 1 1">
 </ColorInterpolator>
 
