--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <transform translation="4.4 9.6 1.5">
   <shape>
     <appearance>
-     <material specularColor='0.3 0.3 0.3'></material>
+     <Material specularColor='0.3 0.3 0.3'></Material>
     </appearance>
    <text string="AZTEC" solid = "false"></text>
   </shape>
