--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
 </transform>
 <!--Текст-->
 <Anchor url="https://ru.wikipedia.org/wiki/%D0%90%D1%86%D1%82%D0%B5%D0%BA%D0%B8" parameter="target='_self'">
-  <transform translation="4.4 9.6 1.5">
-  <shape>
-    <appearance>
-     <Material specularColor='0.3 0.3 0.3'></Material>
-    </appearance>
-   <text string="AZTEC" solid = "false"></text>
-  </shape>
-  </transform>
+  <Transform translation="4.4 9.6 1.5">
+  <Shape>
+    <Appearance>
+      <Material specularColor='0.3 0.3 0.3'></Material>
+    </Appearance>
+   <Text string="AZTEC" solid = "false"></Text>
+  </Shape>
+  </Transform>
 </Anchor>
  <!--Земля-->
  <transform translation="-14 -2.4 -14">
