--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <Transform translation="4.4 9.6 1.5">
   <Shape>
     <Appearance>
-      <Material specularColor='0.3 0.3 0.3'></Material>
+      <Material diffuseColor='0.3 0.3 0.3'></Material>
     </Appearance>
    <Text string="AZTEC" solid = "false"></Text>
   </Shape>
