--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         transform: translate(-50%, -50%)}
     </style>
     <head>
-        <meta charset="utf-8" />
-        <title>Лаба4</title>
-        <link rel="stylesheet" href="http://x3dom.org/release/x3dom.css" />
-		<script src="https://www.x3dom.org/download/x3dom.js"></script>
+       <meta charset="utf-8" />
+    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
+    <title>Лабораторная работа 4</title>
+    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
+    <script src="https://www.x3dom.org/download/x3dom.js"></script>
     </head>
     <body style='width:100%; height:100%; border:0; margin:0; padding:0; background: linear-gradient(#ADD8E6 1%,#4682B4 50%, White);'>
         <x3d id='x3dElement' showStat='false' showLog='false' style='width:100%; height:100%; border:0'>
